--- a/client/package.json
+++ b/client/package.json
@@ -5,29 +5,43 @@
   "scripts": {
     "start": "webpack-dev-server --port $PORT --host $IP --config webpack.config.js --public shopify-app-mjoffily.c9users.io --progress --hot",
     "dev": "webpack",
+    "test": "mocha --require @babel/register --require ./test/config-tests.js 'test/**/test-*.js'",
     "build": "webpack --mode production",
     "design": "serve ./design"
   },
   "author": "James Moore",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.49",
+    "@babel/preset-env": "^7.0.0-beta.49",
+    "@babel/register": "^7.0.0-beta.49",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-loader": "^8.0.0-beta.3",
+    "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
+    "eslint": "^4.19.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-config-standard-jsx": "^5.0.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-standard": "^3.1.0",
+    "jsdom": "^7.2.2",
+    "mocha": "^5.2.0",
+    "webpack": "^4.9.1",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-cli": "^2.1.4",
+    "webpack-dev-server": "^2.9.4"
+  },
+  "dependencies": {
     "axios": "^0.17.1",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.11",
     "hyperscript-helpers": "^3.0.3",
     "moment": "^2.22.1",
     "ramda": "^0.25.0",
+    "serve": "^6.5.8",
     "style-loader": "^0.21.0",
-    "virtual-dom": "^2.1.1",
-    "webpack": "^4.8.1",
-    "webpack-bundle-analyzer": "^2.11.2",
-    "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^2.9.4"
-  },
-  "dependencies": {
-    "serve": "^6.4.8"
+    "virtual-dom": "^2.1.1"
   }
 }
