--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,10 @@
   "name": "chat-example",
   "version": "0.0.0",
   "description": "A chat example to showcase how to use `socket.io` with a static `express` server with `async` for control flow.",
-  "main": "server.js",
+  "scripts": {
+    "start": "server.js",
+    "test": "mocha 'test/**/test-product-api.js'"
+  },
   "repository": "",
   "author": "Mostafa Eweda <mo.eweda@gmail.com>",
   "dependencies": {
@@ -11,7 +14,15 @@
     "bcrypt": "^2.0.1",
     "bluebird": "~3.5.1",
     "express": "~4.13.4",
+    "jsonwebtoken": "^8.2.1",
     "mongodb": "^3.0.2",
+    "ramda": "^0.25.0",
     "socket.io": "~0.9.14"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
+    "mocha": "^5.1.1",
+    "wtfnode": "^0.7.0"
   }
 }
