--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "A chat example to showcase how to use `socket.io` with a static `express` server with `async` for control flow.",
   "scripts": {
     "start": "server.js",
-    "test": "mocha 'test/**/test-product-api.js'"
+    "test": "mocha 'test/**/test-*.js'"
   },
   "repository": "",
   "author": "Mostafa Eweda <mo.eweda@gmail.com>",
@@ -15,9 +15,11 @@
     "bluebird": "~3.5.1",
     "express": "~4.13.4",
     "jsonwebtoken": "^8.2.1",
+    "moment": "^2.22.2",
     "mongodb": "^3.0.2",
     "ramda": "^0.25.0",
-    "socket.io": "~0.9.14"
+    "socket.io": "~0.9.14",
+    "winston": "^3.0.0-rc6"
   },
   "devDependencies": {
     "chai": "^4.1.2",
