--- a/server/database/mongo-DEV.conf
+++ b/server/database/mongo-DEV.conf
@@ -7,9 +7,10 @@ storage:
    dbPath: data/DEV
 systemLog:
    destination: file
-   path: "/var/log/mongodb/DEV/mongod.log"
+   path: "/var/log/mongodb/DEV/mongod-36.log"
    logAppend: true
 storage:
-   smallFiles: true
+   mmapv1:
+      smallFiles: true
    journal:
       enabled: false
