--- a/server/database/mongo-TEST.conf
+++ b/server/database/mongo-TEST.conf
@@ -7,8 +7,10 @@ storage:
    dbPath: data/TEST
 systemLog:
    destination: file
-   path: "/var/log/mongodb/TEST/mongod.log"
+   path: "/var/log/mongodb/TEST/mongod-3.6.5.log"
    logAppend: true
 storage:
+   mmapv1:
+      smallFiles: true
    journal:
       enabled: false
