--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "A chat example to showcase how to use `socket.io` with a static `express` server with `async` for control flow.",
   "scripts": {
     "start": "server.js",
-    "test": "mocha 'test/**/test-*.js'"
+    "test": "mocha 'test/**/test-product-inventory-api.js'"
   },
   "repository": "",
   "author": "Mostafa Eweda <mo.eweda@gmail.com>",
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "chai-datetime": "^1.5.0",
     "chai-http": "^4.0.0",
     "mocha": "^5.1.1",
     "wtfnode": "^0.7.0"
