--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "bluebird": "~3.5.1",
     "express": "~4.13.4",
     "jsonwebtoken": "^8.2.1",
+    "body-parser": "~1.18.2",
     "moment": "^2.22.2",
     "mongodb": "^3.0.2",
     "ramda": "^0.25.0",
