--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "A chat example to showcase how to use `socket.io` with a static `express` server with `async` for control flow.",
   "scripts": {
     "start": "server.js",
-    "test": "mocha 'test/**/test-product-inventory-api.js'"
+    "test": "mocha 'test/**/test-max-date-re*.js'"
   },
   "repository": "",
   "author": "Mostafa Eweda <mo.eweda@gmail.com>",
