--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,12 @@
     "axios": "~0.18.0",
     "bcrypt": "^2.0.1",
     "bluebird": "~3.5.1",
+    "body-parser": "~1.18.2",
+    "colors": "^1.3.2",
+    "commander": "^2.18.0",
     "express": "~4.13.4",
     "jsonwebtoken": "^8.2.1",
-    "body-parser": "~1.18.2",
+    "loglevel": "^1.6.1",
     "moment": "^2.22.2",
     "mongodb": "^3.0.2",
     "ramda": "^0.25.0",
