--- a/Dockerfile-batch
+++ b/Dockerfile-batch
@@ -16,7 +16,11 @@ RUN echo "*       *       *       *       *       run-parts /etc/periodic/everym
 RUN printf "#!/bin/sh\n\n/usr/local/bin/node --version > /app/server/logs/testcron.log" >> /etc/periodic/everymin/testcron
 RUN chmod a+x /etc/periodic/everymin/testcron
 
-# install packages for both client and server
+#Add an "every 10 minutes" cron configuration to run synch of products
+RUN mkdir /etc/periodic/10min
+RUN echo "*/10    *       *       *       *       run-parts /etc/periodic/10min" >> /etc/crontabs/root
+
+# install packages for batch
 COPY ./server/batch/package.json /app/server/package.json
 WORKDIR /app/server
 RUN npm config set registry http://registry.npmjs.org
@@ -26,13 +30,14 @@ RUN npm install
 # copy server files
 COPY ./server/_config.js /app/server/_config.js
 COPY ./server/secure/credentials.js /app/server/secure/credentials.js
-COPY ./server/batch/retrieve_latest_sell_orders.js /app/server/batch/retrieve_latest_sell_orders.js
+COPY ./server/batch/sync_orders.js /app/server/batch/sync_orders.js
+COPY ./server/batch/sync_products.js /app/server/batch/sync_products.js
 
 # Setup cron
-COPY ./server/batch/batchjobs /etc/periodic/15min
+COPY ./server/batch/sync_orders_wrapper /etc/periodic/10min
+COPY ./server/batch/sync_products_wrapper /etc/periodic/15min
 RUN chmod a+x /etc/periodic/15min/batchjobs
 
 
 WORKDIR /app/server/batch
 CMD ["crond", "-l2", "-f"]
-
